macro-template/tests/ui/missing_row_comma.stderr
error: expected `,`
 --> tests/ui/missing_row_comma.rs:7:13
  |
7 |             (u32, 4),
  |             ^
